Jann 30/objects/CRS_Flavor__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRS_Flavor_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>CRS Flavor External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flavor_Name__c</fullName>
        <label>Flavor Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvwCRS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To distinguish if this flavor only shows up in glaceau vitaminwater flavor list</inlineHelpText>
        <label>gvwCRS</label>
        <type>Checkbox</type>
    </fields>
    <label>Flavor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Flavor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flavor ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flavors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>